# ScratchBall

./: .gitignore  CMakeLists.txt
core/header/: Ball.hpp  Context.hpp
core/header/algorithm/: BaseAlgorithm.hpp  UnvariableAlgorithm.hpp
core/header/util/: RandomUtil.hpp
core/source/: Ball.cpp  Context.cpp  main.cpp
core/source/algorithm/: BaseAlgorithm.cpp  UnvariableAlgorithm.cpp
core/source/random/: RandomUtil.cpp
include/effolkronium/: random.hpp
